<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_tab_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_launcher_background"
    tools:context=".TabBarFragment">

    <ImageView
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="150dp"
    android:layout_marginBottom="20dp"
    android:src="@drawable/international_pok_mon_logo"
        android:scaleType="fitXY"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <Button
            android:id="@+id/bPokedex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pokedex"
            android:backgroundTint="@color/orange"/>

        <Button
            android:id="@+id/bEntrenador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/entrenador"
            android:backgroundTint="@color/orange"/>

        <Button
            android:id="@+id/bTenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tenda"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>
</LinearLayout>
