<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp"
        android:orientation="vertical"

        android:layout_marginTop="18dp"

        tools:context="DetailFragment">




            <TextView
                android:id="@+id/tvFilmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="50dp"

                android:text="The Grudge"/>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/ivImageStar"

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_yellow">
                </ImageView>

                <TextView
                    android:id="@+id/tvReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingLeft="15dp"

                    android:textSize="16sp"
                    android:text="6.6/10"/>
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">
                <TextView
                    android:id="@+id/tvGenresMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:background="@drawable/round_text_genre"
                    android:textSize="16sp"
                    android:textColor="@color/darkBlue"
                    android:text="HORROR"/>
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">
                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginRight="15dp"
                    android:text="@string/length"/>
                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginRight="15dp"

                    android:text="@string/language"/>
                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginRight="15dp"

                    android:text="@string/year"/>
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvLengthMovieHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="1h"/>
                    <TextView
                        android:id="@+id/tvLengthMovieMinuts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginRight="15dp"

                        android:text="30min"/>
                <TextView
                    android:id="@+id/tvLanguageInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginRight="15dp"

                    android:text="@string/language"/>
                <TextView
                    android:id="@+id/tvYearInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginRight="15dp"

                    android:text="@string/year"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:textColor="@color/purple"
                android:textSize="25sp"

                android:text="@string/description"/>
            <TextView
                android:id="@+id/tvDescriptionInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="The Grudge"/>
            <TextView
                android:id="@+id/tvCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:textColor="@color/purple"
                android:textSize="25sp"

                android:text="@string/cast"/>
            <TextView
                android:id="@+id/tvCastInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="The Grudge"/>

    </LinearLayout>
</ScrollView>
